03-advanced-react completed

--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -310,7 +310,7 @@ ul {
 .nav-container {
   display: flex;
   justify-content: space-between;
-  max-width: 400px;
+  min-width: 400px;
 }
 .nav-links {
   display: flex;
